--- a/main.css
+++ b/main.css
@@ -3,52 +3,60 @@ html, body, h1, h2, h3, p, ul, ol, li, a {
     border: 0;
     margin: 0;
 }
-
 body {
-    padding: 20px;
+    padding: 0px;
 }
-
 ul, ol {
     margin: 0 0 0 50px;
 }
-
 h1 {
     margin: 10px 0 15px 0;
 }
-
 h2 {
     margin: 10px 0 20px 0;
 }
-
 h3 {
-    margin: 15px 0 15px 0;
-    border-bottom: 1px solid #cccccc;
     padding: 0 0 3px 0;
+    border-bottom: 1px solid #cccccc;
+    margin: 15px 0 15px 0;
 }
 
+.header {
+    padding: 10px 10px 20px 10px;
+    color: #ffffff;
+    background-color: #333333;
+    text-align: center;
+}
+.header a {
+    color: #ffffff;
+}
+.content{
+    width: 500px;
+    padding: 20px;
+    border: 1px solid #dddddd;
+    margin: 30px auto 0 auto;
+}
 .nav{
     margin: 0;
 }
-
+.nav a {
+    text-decoration: none;
+}
 .nav li{
     display: inline;
 }
-
 .recipes {
     margin: 0;
     list-style-type: none;
 }
-
 .recipes li {
-    margin: 0 0 5px 0;
-    border: 1px solid #cccccc;
     padding: 0 15px 15px 15px;
+    border: 1px solid #cccccc;
+    margin: 0 0 5px 0;
 }
-
 .recipes h3 {
     border: 0;
 }
-
 .recipes a {
     text-decoration: none;
 }
