--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@ html, body, h1, h2, h3, p, ul, ol, li, a {
     margin: 0;
 }
 body {
+    font-family: "Open Sans",Helvetica,Arial,sans-serif!important;
+    font-size: 15px;
+    background: #ffffff url(img/background1.jpg) top left repeat;
     padding: 0px;
 }
 ul, ol {
@@ -22,18 +25,20 @@ h3 {
 }
 
 .header {
+    background-color: #111111;
     padding: 10px 10px 20px 10px;
     color: #ffffff;
-    background-color: #333333;
     text-align: center;
 }
 .header a {
+    /* font-family: monaco,courier,monospace; */
     color: #ffffff;
 }
 .content{
-    width: 500px;
-    padding: 20px;
-    border: 1px solid #dddddd;
+    width: 600px;
+    min-height: 72vh;
+    background-color: #ffffff;
+    padding: 20px 100px;
     margin: 30px auto 0 auto;
 }
 .nav{
@@ -44,19 +49,41 @@ h3 {
 }
 .nav li{
     display: inline;
+    margin: 0 3px 0 3px;
 }
-.recipes {
+.recipes { 
     margin: 0;
     list-style-type: none;
 }
 .recipes li {
     padding: 0 15px 15px 15px;
-    border: 1px solid #cccccc;
-    margin: 0 0 5px 0;
+    border: 4px double paleturquoise;
+    border-radius: 8px;
+    margin: 0 0 15px 0;
 }
 .recipes h3 {
     border: 0;
 }
+.recipes p {
+    display: inline-block;
+}
 .recipes a {
     text-decoration: none;
+}
+.recipes img {
+    width: 150px;
+}
+.featured {
+    background: #ffffff url(img/featured.jpg) center center no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 300px;
+}
+.featured h3 {
+    padding: 10px 30px;
+    border: 0;
+    margin-top: 140px;
+    position: absolute;
+    background-color: #111111;
+    color: #ffffff;
 }
