--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@ body {
 ul, ol {
     margin: 0 0 0 50px;
 }
+p {
+    line-height: 1.5;
+}
 h1 {
     margin: 10px 0 15px 0;
 }
@@ -55,23 +58,24 @@ h3 {
     margin: 0;
     list-style-type: none;
 }
-.recipes li {
+.recipes li, .suggest-form {
     padding: 0 15px 15px 15px;
     border: 4px double paleturquoise;
     border-radius: 8px;
     margin: 0 0 15px 0;
+    min-height: 240px;
 }
 .recipes h3 {
     border: 0;
-}
-.recipes p {
-    display: inline-block;
 }
 .recipes a {
     text-decoration: none;
 }
 .recipes img {
+    float: left;
     width: 150px;
+    height: 220px;
+    padding: 20px 20px 0 0;
 }
 .featured {
     background: #ffffff url(img/featured.jpg) center center no-repeat;
@@ -86,4 +90,34 @@ h3 {
     position: absolute;
     background-color: #111111;
     color: #ffffff;
+}
+.suggest-form input, .suggest-form label, .suggest-form textarea {
+    display: block;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+}
+.suggest-form input {
+    border: 1px solid #ddd;
+    padding: 3px;
+}
+.suggest-form label {
+    margin-top: 20px;
+    margin-bottom: 6px;
+}
+.suggest-form textarea {
+    height: 100px;
+    border: 1px solid #ddd;
+}
+.suggest-form input[type=submit] {
+    width: 100px;
+    margin: 20px auto 10px auto;
+    padding: 5px 15px; 
+    background: paleturquoise;
+    color: #666666;
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
 }
