--- a/main.css
+++ b/main.css
@@ -16,20 +16,26 @@ p {
     line-height: 1.5;
 }
 h1 {
-    margin: 10px 0 15px 0;
+    margin: 10px auto;
+    border-bottom: 1px solid #ffffff;
+    padding-bottom: 5px;
+    width: 30%;
 }
 h2 {
     margin: 10px 0 20px 0;
 }
 h3 {
     padding: 0 0 3px 0;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 4px double #afeeee;
     margin: 15px 0 15px 0;
+    color: #69cece;
 }
 
 .header {
+    margin: 0 auto;
+    width: 800px;
     background-color: #111111;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 0px 20px 0px;
     color: #ffffff;
     text-align: center;
 }
@@ -39,16 +45,22 @@ h3 {
 }
 .content{
     width: 600px;
-    min-height: 72vh;
+    min-height: 76.4vh;
     background-color: #ffffff;
     padding: 20px 100px;
-    margin: 30px auto 0 auto;
+    margin: 0 auto;
 }
 .nav{
     margin: 0;
 }
 .nav a {
     text-decoration: none;
+    padding: 1px 10px 3px 10px;
+    border-radius: 5px;
+}
+.nav a:hover {
+    background-color: #afeeee;
+    color: #111111;
 }
 .nav li{
     display: inline;
@@ -60,7 +72,7 @@ h3 {
 }
 .recipes li, .suggest-form {
     padding: 0 15px 15px 15px;
-    border: 4px double paleturquoise;
+    border: 4px double #afeeee;
     border-radius: 8px;
     margin: 0 0 15px 0;
     min-height: 240px;
@@ -70,26 +82,26 @@ h3 {
 }
 .recipes a {
     text-decoration: none;
+    text-align: center;
+    margin-top: 30px;
+    width: 70px;
+    padding: 5px 15px; 
+    background: #afeeee;
+    color: #666666;
+    cursor: pointer;
+    border-radius: 5px;
+    position: absolute;
+    font-size: 12px;
+}
+.recipes a:hover {
+    background-color: #69cece;
+    color: #ffffff;
 }
 .recipes img {
     float: left;
     width: 150px;
     height: 220px;
     padding: 20px 20px 0 0;
-}
-.featured {
-    background: #ffffff url(img/featured.jpg) center center no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 300px;
-}
-.featured h3 {
-    padding: 10px 30px;
-    border: 0;
-    margin-top: 140px;
-    position: absolute;
-    background-color: #111111;
-    color: #ffffff;
 }
 .suggest-form input, .suggest-form label, .suggest-form textarea {
     display: block;
@@ -114,10 +126,14 @@ h3 {
     width: 100px;
     margin: 20px auto 10px auto;
     padding: 5px 15px; 
-    background: paleturquoise;
+    background: #afeeee;
     color: #666666;
     border: 0 none;
     cursor: pointer;
     -webkit-border-radius: 5px;
     border-radius: 5px; 
+}
+.suggest-form input[type=submit]:hover {
+    background-color: #69cece;
+    color: #ffffff;
 }
